--- a/digital_skills/index.Rmd
+++ b/digital_skills/index.Rmd
@@ -1,5 +1,5 @@
 ---
-pagetitle: "Digital Skills Services in Trafford"
+pagetitle: "Trafford Digital Services"
 lang: "en-GB"
 output: 
   html_document:
@@ -21,13 +21,12 @@ df <- read_csv("data/digital_skills_services.csv") %>%
   mutate(Category = fct_relevel(as_factor(Category),
                              level = c("Community hub", "Library", "Charity/community group", "Education establishment", "Business", "Job Centre")),
          `Target audience` = fct_relevel(as_factor(`Target audience`),
-                             level = c("Everyone", "Adults and young people with disabilities", "Customers", "Elderley", "Families", "Students", "Unemployed", "Women", "Young people")),
+                             level = c("Everyone", "Adults and young people with disabilities", "Customers", "Elderley", "Families", "Individuals with hearing impairment", "Students", "Unemployed", "Women", "Young people")),
          popup = str_c("<strong>", `Organisation name`, "</strong><br/>",
                         ifelse(is.na(Phone),"",str_c("Tel: ", Phone, "<br/>")), 
                         ifelse(is.na(Email),"",str_c("Email: ", Email, "<br/>")), 
                         ifelse(is.na(Website),"",str_c("<a href='", Website, "'target='_blank'>Website</a><br/><br/>")),
                         ifelse(is.na(Address),"",str_c("Address: ", Address, ", ", Postcode))
-                        #ifelse(is.na(Postcode),"",str_c("Postcode: ", Postcode))
                        ) %>% map(HTML))
 
 # shared dataframe
@@ -84,7 +83,7 @@ a(
 </header><main>
 ```{r, ui}
 div(class = "container-fluid",
-    h1("Digital Skills Services in Trafford", style = "padding-top: 25px; margin-bottom: 20px;"),
+    h1("Trafford Digital Services", style = "padding-top: 25px; margin-bottom: 20px;"),
     div(class = "row",
         div(class = "col-xs-12 col-sm-6 col-md-6 col-lg-6", map),
         div(class = "col-xs-6 col-sm-3 col-md-3 col-lg-3", 
