--- a/digital_skills/index.Rmd
+++ b/digital_skills/index.Rmd
@@ -84,6 +84,8 @@ a(
 ```{r, ui}
 div(class = "container-fluid",
     h1("Trafford Digital Services", style = "padding-top: 25px; margin-bottom: 20px;"),
+    p("Discover the range of digital support available in Trafford. Find details of Wi-Fi hotspots, computer access and device lending schemes, along with contact information and website links to local organisations."),
+    br(),
     div(class = "row",
         div(class = "col-xs-12 col-sm-6 col-md-6 col-lg-6", map),
         div(class = "col-xs-6 col-sm-3 col-md-3 col-lg-3", 
