--- a/digital_skills/index.Rmd
+++ b/digital_skills/index.Rmd
@@ -21,7 +21,7 @@ df <- read_csv("data/digital_skills_services.csv") %>%
   mutate(Category = fct_relevel(as_factor(Category),
                              level = c("Community hub", "Library", "Charity/community group", "Education establishment", "Training provider", "Retailer", "Job Centre")),
          `Target audience` = fct_relevel(as_factor(`Target audience`),
-                             level = c("Everyone", "Adults and young people with disabilities", "Customers", "Families", "Individuals with hearing impairment", "Jobseekers", "Older people", "Students", "Women", "Young people")),
+                             level = c("Everyone", "Adults and young people with disabilities", "Customers", "Families", "Individuals with hearing impairment", "Jobseekers", "Older people", "Residents", "Students", "Women", "Young people")),
          popup = str_c("<strong>", `Organisation name`, "</strong><br/>",
                         ifelse(is.na(Phone),"",str_c("Tel: ", Phone, "<br/>")), 
                         ifelse(is.na(Email),"",str_c("Email: ", Email, "<br/>")), 
@@ -37,9 +37,9 @@ sd_table <- select(df, `Organisation name`, `Additional information`) %>%
 ```
 
 ```{r, map}
-map <- leaflet(sd, width = "100%", height = 400) %>%
+map <- leaflet(sd, width = "100%", height = 600) %>%
   addTiles(urlTemplate = "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", attribution = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a> | <a href="https://www.ons.gov.uk/methodology/geography/licences">Contains OS data © Crown copyright and database right (2021)</a>', options = tileOptions(minZoom = 6, maxZoom = 18)) %>%
-  setView(lng = -2.330256, lat= 53.421829, zoom =11) %>%
+  setView(lng = -2.330256, lat= 53.421829, zoom = 11.5) %>%
   addPolygons(data = sf, fillColor = "#CCCCCC", weight = 0.8, opacity = 1, color = "#212121") %>%  
   addAwesomeMarkers(popup = df$popup, icon = ~makeAwesomeIcon(icon = "fas fa-hand-pointer", library = "fa", iconColor = "#FFFFFF", markerColor = "blue")) %>%
   addFullscreenControl()
@@ -88,8 +88,8 @@ div(class = "container-fluid",
     p("Discover the range of digital support available in Trafford. Find details of Wi-Fi hotspots, computer access and device lending schemes, along with contact information and website links to local organisations."),
     br(),
     div(class = "row",
-        div(class = "col-xs-12 col-sm-6 col-md-6 col-lg-6", map),
-        div(class = "col-xs-6 col-sm-3 col-md-3 col-lg-3", 
+        div(class = "col-xs-12 col-sm-6 col-md-8 col-lg-8", map),
+        div(class = "col-xs-6 col-sm-3 col-md-2 col-lg-2", 
             list(
               # Category
               filter_checkbox(id = "category", label = "Category", sharedData = sd, group = ~Category),
@@ -98,7 +98,7 @@ div(class = "container-fluid",
               filter_checkbox(id = "Target audience", label = "Target audience", sharedData = sd, group = ~`Target audience`),
               br()
             )),
-        div(class = "col-xs-6 col-sm-3 col-md-3 col-lg-3", 
+        div(class = "col-xs-6 col-sm-3 col-md-2 col-lg-2", 
             list(
               # WiFi
               filter_checkbox(id = "WiFi", label = "WiFi", sharedData = sd, group = ~ifelse(WiFi == "x", "Available", NA), inline = TRUE),
